added an ability for the fish to glow and figured out how to move the fish's image to css to enable hover effects, and designed a 2nd fish with glow on photoshop and inserted it

--- a/css/style.css
+++ b/css/style.css
@@ -39,15 +39,39 @@ html,body{
     width:100px!important;  
 }
 
-.fishhead {
-    position: relative;
-    left: 35%;  
-    top: 10%; 
-    width: 350px;  
+
+
+
+
+.DDD {
+    margin: 100px; 
+    font-size: 30px;
+    opacity: .8;
+     
 }
 
+.fishhead {
+ 
+}
 
+.fish {
+    
+    position: relative;
+    left: 40%;   
+    margin-top: 40px; 
+    width: 350px;
+}
+
+.octodiv{
+    position: relative;
+    float:right;
+    margin: 30px;
+}
+.octo {
+    width: 80px; 
+}
 .angler {  
+    content:url("../images/angler.png");
     position:fixed;  
     top:96.9%;  
     left:108%;  
@@ -57,13 +81,29 @@ html,body{
     z-index:1;  
 }
 
-.octoball {
-    width: 200px; 
+.angler:hover{
+    content:url("../images/angler2.png");
+
 }
 
+.whale {
+    width:400px; 
+}
 .mountain {
     width: 400px; 
 }
+.desk{
+    opacity: .8; 
+}
+.opac{
+    opacity:.7; 
+}
+.vansdesk {
+    opacity:.8; 
+}
+
+
+
 
 
 .slide {
@@ -85,6 +125,15 @@ html,body{
     font-size:100px;
     font-weight:bold;
     color:rgba(255,255,255,0.3);
+}
+
+.slide2text {
+    position:absolute;
+    bottom:0px;
+    left:0px;
+    font-size:80px;
+    color:#2c3e50;
+    opacity: .8; 
 }
 
 .button{
@@ -157,6 +206,11 @@ left: -150px;
     top:100px;
     right:300px;
 }
+#slide2 img:nth-child(9){
+    position:absolute;
+    top:300px;
+    right:200px;
+}
 
 
 /****************************** SLIDE 3 *******************************/ 
@@ -193,6 +247,7 @@ left: -150px;
     top:100px;      
     right:300px;  
 }
+
 
 /******************************
  SLIDE 4 
