--- a/css/style.css
+++ b/css/style.css
@@ -141,14 +141,13 @@ html,body{
     width:50px;
     height:50px;
     position:absolute;
-    bottom:0px;
+    bottom:5px;
     left:50%;
-    background-color:#333333;
-    background-image:url(../images/arrow.png);
+    content:url(../images/shell.png);
     background-repeat:no-repeat;
 }
 .button:hover{
-    background-color:#494949;
+    content:url(../images/shell2.png);
     cursor:pointer;
 }
 
