--- a/css/jquery.bxslider.css
+++ b/css/jquery.bxslider.css
@@ -56,7 +56,7 @@
 
 .bx-wrapper .bx-loading {
 	min-height: 50px;
-	background: url(images/bx_loader.gif) center center no-repeat #fff;
+	background: url(../images/bx_loader.gif) center center no-repeat #fff;
 	height: 100%;
 	width: 100%;
 	position: absolute;
@@ -105,20 +105,25 @@
 
 .bx-wrapper .bx-prev {
 	left: 10px;
-	background: url(images/controls.png) no-repeat 0 -32px;
+	background: url(../images/controls.png) no-repeat 0 -32px;
+	opacity: .2; 
 }
 
 .bx-wrapper .bx-next {
 	right: 10px;
-	background: url(images/controls.png) no-repeat -43px -32px;
+	background: url(../images/controls.png) no-repeat -43px -32px;
+	opacity: .2; 
 }
 
 .bx-wrapper .bx-prev:hover {
 	background-position: 0 0;
+	opacity: .5;
 }
 
 .bx-wrapper .bx-next:hover {
 	background-position: -43px 0;
+	opacity: .5;
+
 }
 
 .bx-wrapper .bx-controls-direction a {
@@ -148,7 +153,7 @@
 	width: 10px;
 	height: 11px;
 	outline: 0;
-	background: url(images/controls.png) -86px -11px no-repeat;
+	background: url(../images/controls.png) -86px -11px no-repeat;
 	margin: 0 3px;
 }
 
@@ -163,7 +168,7 @@
 	width: 9px;
 	height: 11px;
 	outline: 0;
-	background: url(images/controls.png) -86px -44px no-repeat;
+	background: url(../images/controls.png) -86px -44px no-repeat;
 	margin: 0 3px;
 }
 
