switched out the code for BXSlider so that it's cleaner

--- a/css/style.css
+++ b/css/style.css
@@ -228,6 +228,12 @@ ul.navigation:hover  ul div {
     position: relative;
 }
 
+.img5 {
+    content:url(../images/slide3/boats.png);
+    content:title("Bali");
+    position: relative;
+}
+
 .img {
     position: relative;
 }
