updated js, now using two sliders, added chores

--- a/css/style.css
+++ b/css/style.css
@@ -203,7 +203,9 @@ ul.navigation:hover  ul div {
          /*     3 slide images     */
          
 
-
+[title~=all] {
+    border: 5px solid yellow;
+}
 
 
 .img1 {
