--- a/css/style.css
+++ b/css/style.css
@@ -42,9 +42,16 @@ html,body{
 .font3{
     font-family: soymilk; 
     position:absolute;
-    bottom:50px;
-    right: 200px;
+    bottom:60px;
+    right: 250px;
     font-size:110px;
+}
+.world {
+    font-family: soymilk; 
+    position:absolute;
+    bottom:5px;
+    right: 130px;
+    font-size:60px;
 }
 
 .slide2text {
@@ -384,7 +391,6 @@ left: -150px;
 
 
 
-
 /******************************
  SLIDE 4 
 *******************************/
@@ -415,6 +421,10 @@ left: -150px;
     
         }
 
+
+ h2 {
+    font-size: 18px;    
+    }
  h3 {
     font-family: goudy; 
     text-transform: uppercase;
@@ -423,34 +433,57 @@ left: -150px;
 }
 div.columns { 
     margin: auto;
-    width: 90%;
+    width: 95%;
     height: 90%;
     padding: 50px; 
 }
 div.columns div { 
         padding:1%;
-        width: 20%; 
+        width: 18%; 
         height: 80%;
         display: block;
         float: left;
 }
 .icons {
+
     clear:both;
     min-height: 100px; 
-    background-color:#e14e32; 
-    width: 90%;
+    width: 100%;
     float: left;
     position: absolute;
-    left: 0;
+    left: 50%;
     bottom: 100px;
+    }
+.innerIcon{
+    display: inline;
+    float:left;
+ }
+.innerIcon i {
+    margin: 10px;
 }
+
+
 .footer{
-       clear:both;
-    min-height: 50px; 
-    background-color:#46A9E0; 
-    width: 90%;
+    min-height: 40px; 
+    background-color:#e14e32; 
+    right: 0;
+    width: 60%;
     position: absolute;
-    bottom: 0;
-    font-size: 15px;
-    
+    bottom: 20px;
+    font-size: 20px;
+    padding-left: 30px;
+    padding-top: auto; 
+    padding-bottom: auto; 
+    display:block-inline !important;
 }
+.innerfooter div{
+
+    float: left !important;
+    margin: 5px; 
+}
+.cat{ padding-left: 30px; font-size:14px;}
+
+
+
+
+
