--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,19 @@
     font-family: hip;
     src: url(../font/hipster.ttf);
 }
+@font-face {
+    font-family: fing;
+    src: url(../font/Fingbanger.otf);
+}
+@font-face {
+    font-family: time;
+    src: url(../font/time.ttf);
+}
+@font-face {
+    font-family: jo;
+    src: url(../font/jo.ttf);
+}
+
 
 html,body{ 
     width:100%;     
@@ -29,33 +42,55 @@ html,body{
        
 .logo:hover .me2{
             visibility: visible;}
-    
+
+.drop:hover .me2{
+    visibility: visible; 
+}
 
 .me2 {
     background-color:#e14e32; 
     width: 160px; 
     height:450px;
+    margin:auto;
     position: absolute;
     border-radius: 7px;
     z-index:10;
-    left: 29%%;
-    top: 80px;
-    visibility: hidden;
-    opacity:1;    
+    right: 1%;
+    top: 12%;
+    opacity:.0;   
+    transition:all 1s ease-in-out;
+ 
     }
 
-.meText {
+.me2:hover {
+    opacity:.9;
+    }
+.meText  {
     color:#FFF; 
-    margin-top:1px;
+    margin:5px;
     opacity:.8; 
-    font-family: hip;   
-    font-size: 35px;
+    font-family: jo;   
+    font-size: 30px;
 }   
 .meText img{
     width: 80px;
-    margin: 0px !important;
 
     }
+.boat {
+    width: 90px;
+    position: relative;
+    float:right;
+    margin: 30px;
+    opacity:.7;
+    content:url("../images/boat.png");
+    transition:all 2s ease-in-out;
+}
+.boat:hover {
+    content:url("../images/boat2.png");
+    opacity:.9;
+}
+
+
 
 .m {
     background-color:#e14e32; 
@@ -69,20 +104,33 @@ html,body{
 }
 
 .font {
-    font-family: soymilk; 
+    font-family:fing; 
     font-size: 120px; 
     margin: 100px;
     position: absolute;
-    right: 33%;
-    bottom: -2% 
+    left: 5%;
+    bottom: -6%; 
+    opacity:.9;
+    width: 400px;
 }
+
+.font1 {
+    font-family: soymilk; 
+    position:absolute;
+    bottom:40px;
+    right: 120px;
+    font-size:50px;
+    opacity:1;
+    
+}
+
 
 .font2{
     font-family: soymilk; 
     position:absolute;
     top:90px;
     right: 240px;
-    font-size:100px;
+    font-size:120px;
 }
 
 .font3{
@@ -90,8 +138,17 @@ html,body{
     position:absolute;
     bottom:60px;
     right: 250px;
-    font-size:100px;
+    font-size:120px;
 }
+.font32{
+    font-family: soymilk; 
+    position:absolute;
+    bottom:60px;
+    left: 250px;
+    font-size:70px;
+    opacity:.8;
+}
+
 .world {
     font-family: soymilk; 
     position:absolute;
@@ -118,7 +175,8 @@ html,body{
 }
 
 .logo:hover  {
-    opacity: .96;
+    opacity: .0;
+    transition: 1s;
 }
 
 .logo { 
@@ -160,7 +218,7 @@ ul.navigation li:hover,
 }
 
 ul.navigation:hover  ul div {
-        content:url(../images/shell2.png);
+        width: 45px;    
         opacity:.9;
 
 }
@@ -212,22 +270,6 @@ ul.navigation:hover  ul div {
     width: 350px;
 }
 
-    
-
-.boat {
-    width: 90px;
-    position: relative;
-    float:right;
-    margin: 30px;
-    transition: all 0.5s ease-in-out; 
-    content:url("../images/boat.png");
-
-}
-.boat:hover {
-    content:url("../images/boat2.png");
-
-}
-
 .angler {  
     content:url("../images/angler.png");
     position:fixed;  
@@ -241,6 +283,7 @@ ul.navigation:hover  ul div {
 
 .angler:hover{
     content:url("../images/angler2.png");
+
 
 }
 
@@ -289,39 +332,6 @@ ul.navigation:hover  ul div {
 
          /*     3 slide images     */
          
-
-
-.img1 {
-    content:url(../images/slide3/mt.png);
-    position: relative;
-}
-
-.img2 {
-    content:url(../images/slide3/firewater.png);
-    content: attr(title):"turtles"; 
-    position: relative;
-}
-
-.img3 {
-    content:url(../images/slide3/ocean2.png);
-    position: relative;
-}
-
-.img4 {
-    content:url(../images/slide3/beach.png);
-    content:title("Bali");
-    position: relative;
-}
-
-.img5 {
-    content:url(../images/slide3/boats.png);
-    content:title("Bali");
-    position: relative;
-}
-
-.img {
-    position: relative;
-}
 
 
 
@@ -493,7 +503,7 @@ div.columns div {
         float: left;
 }
 .icons {
-    margin-top: 50px;
+    margin-top: 90px;
     clear:both;
     min-height: 100px; 
     width: 100%;
@@ -504,7 +514,7 @@ div.columns div {
 
 
 .sign {
-    padding-top: 60px;
+    padding-top: 50px;
     font-family: goudy; 
     text-transform: uppercase;
     letter-spacing: 2px;
@@ -547,7 +557,9 @@ div.columns div {
 }
 .cat{ padding-left: 30px; font-size:14px;}
 
-
+p { 
+    opacity:.7;
+}
 
 
 
